@@ -1,3 +1,8 @@
+2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* src/sapwood-draw.c (get_window_for_shape, draw_simple_image):
+	Refactor shape mask requirement logic into separate function.
+
 2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* === Release 1.36 ===
